changed colors on widget library icons and badges, corrected badge positioning to overlap icon, offset icon library in column

--- a/browse.scss
+++ b/browse.scss
@@ -1,4 +1,17 @@
  .browseWidgets {
   background-color: $ourWidgetsBg;
   text-align: center;
+  h1 {
+    font-size: 5em;
+    position: relative;
+  }
+  a {
+    color: black;
+  }
+  span.badge {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    background-color: $widBadgeBg;
+  }
 }
